@@ -27,7 +27,6 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("v1/projects")
@@ -102,7 +101,15 @@ public class ProjectController {
                 .getTaskTypesByProjectId(id)
                 .stream()
                 .map(TaskTypeEntity::getName)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Operation(summary = "Get project members")
+    @ApiGet(path = "{id}/members")
+    public List<UserDto> getProjectMembers(@PathVariable Long id) {
+        return projectService.getProjectMembers(id).stream()
+                .map(UserMapper.INSTANCE::userToUserDto)
+                .toList();
     }
 
     @Operation(summary = "Add new members to the project")
@@ -114,7 +121,7 @@ public class ProjectController {
         List<UserEntity> addedMembers = projectService.addNewMembers(id, memberIds);
         return addedMembers.stream()
                 .map(UserMapper.INSTANCE::userToUserDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Operation(summary = "Delete member from project")
